Tue Dec  8 08:47:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/Getter/Sender/Getter_Test_Sender_exec.cpp:
          Resolved some timing issues between sender and receiver.

Tue Dec  8 08:17:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector.mpc:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver.mpc:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender.mpc:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.cpp:
          Solved errors duplicate projectnames


Tue Dec  8 07:21:52 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          Minor changes in order to meet the spec.

        * connectors/dds4ccm/tests/Getter/*:
          Added test for the getter.

Mon Dec  7 15:37:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        * connectors/dds4ccm/tests/PSLSampleLost:
        * connectors/dds4ccm/tests/PSLSampleLost/Base/PSL_SampleLost_Base.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Base/PSL_SampleLost_Base.mpc:
        * connectors/dds4ccm/tests/PSLSampleLost/Connector:
        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Connector/PSL_SampleLost_Connector_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors: