@@ -174,17 +174,6 @@
     <source/>
     <implementation xmi:idref="Getter_Test_ConnectorComponentImplementation" />
     <configProperty>
-      <name>qos_profile</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>Getter_Library#Getter_Profile</string>
-        </value>
-      </value>
-    </configProperty>
-    <configProperty>
       <name>topic_name</name>
       <value>
         <type>
@@ -202,17 +191,6 @@
     <!-- hostname -->
     <source/>
     <implementation xmi:idref="Getter_Test_ConnectorComponentImplementation" />
-    <configProperty>
-      <name>qos_profile</name>
-      <value>
-        <type>
-          <kind>tk_string</kind>
-        </type>
-        <value>
-          <string>Getter_Library#Getter_Profile</string>
-        </value>
-      </value>
-    </configProperty>
     <configProperty>
       <name>topic_name</name>
       <value>
